--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "mockery/mockery": "dev-master",
-    "illuminate/support": "5.0.*"
+    "illuminate/support": "5.0.*",
+    "illuminate/http": "5.0.*",
+    "illuminate/http": "5.0.*",
+    "illuminate/database": "5.0.*"
   },
   "autoload": {
     "psr-0": {
