--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.4.0",
+    "robclancy/presenter": "1.3.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
@@ -19,7 +20,8 @@
     "illuminate/support": "5.0.*",
     "illuminate/http": "5.0.*",
     "illuminate/http": "5.0.*",
-    "illuminate/database": "5.0.*"
+    "illuminate/database": "5.0.*",
+    "illuminate/pagination": "5.0.*"
   },
   "autoload": {
     "psr-0": {
