--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "prettus/l5-repository",
-  "description": "Laravel 5 - Repositories to abstract the database layer",
-  "license": "MIT",
+  "description": "Laravel 5 - Repositories to  the database layer",
   "keywords": ["laravel", "repository", "eloquent", "model"],
+  "license": "MIT",
   "authors": [
     {
       "name": "Anderson Andrade",
@@ -11,6 +11,9 @@
   ],
   "require": {
     "php": ">=5.4.0",
+    "illuminate/config": "~5",
+    "illuminate/support": "~5",
+    "league/fractal": "0.11.*",
     "robclancy/presenter": "1.3.*"
   },
   "require-dev": {
@@ -24,10 +27,12 @@
     "illuminate/pagination": "5.0.*"
   },
   "autoload": {
-    "psr-0": {
-      "Prettus\\Repository\\": "src/",
-      "Prettus\\Repository\\Test": "tests/"
+    "psr-4": {
+      "Prettus\\Repository\\": "src/Prettus/Repository/"
     }
   },
-  "minimum-stability": "stable"
+  "config": {
+    "preferred-install": "dist"
+  },
+  "minimum-stability": "dev"
 }
