--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/config": "~5",
-    "illuminate/support": "~5",
+    "illuminate/config": "5.0.*",
+    "illuminate/support": "5.0.*",
     "league/fractal": "0.11.*",
-    "robclancy/presenter": "1.3.*"
+    "robclancy/presenter": "1.3.*",
+    "prettus/laravel-validation": "1.1.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
