--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     "php": ">=5.4.0",
     "illuminate/config": "5.0.*",
     "illuminate/support": "5.0.*",
+    "illuminate/console": "5.0.*",
+    "illuminate/filesystem": "5.0.*",
     "league/fractal": "0.12.*",
     "robclancy/presenter": "1.3.*",
     "prettus/laravel-validation": "1.1.*"
