--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/config": "5.0.*",
-    "illuminate/support": "5.0.*",
-    "illuminate/console": "5.0.*",
-    "illuminate/filesystem": "5.0.*",
+    "illuminate/config": "~5.0|~5.1",
+    "illuminate/support": "~5.0|~5.1",
+    "illuminate/console": "~5.0|~5.1",
+    "illuminate/filesystem": "~5.0|~5.1",
     "league/fractal": "0.12.*",
     "robclancy/presenter": "1.3.*",
     "prettus/laravel-validation": "1.1.*"
@@ -23,11 +23,11 @@
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "mockery/mockery": "dev-master",
-    "illuminate/support": "5.0.*",
-    "illuminate/http": "5.0.*",
-    "illuminate/http": "5.0.*",
-    "illuminate/database": "5.0.*",
-    "illuminate/pagination": "5.0.*"
+    "illuminate/support": "~5.0|~5.1",
+    "illuminate/http": "~5.0|~5.1",
+    "illuminate/http": "~5.0|~5.1",
+    "illuminate/database": "~5.0|~5.1",
+    "illuminate/pagination": "~5.0|~5.1"
   },
   "autoload": {
     "psr-4": {
