--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "prettus/l5-repository",
   "description": "Laravel 5 - Repositories to  the database layer",
-  "keywords": ["laravel", "repository", "eloquent", "model"],
+  "keywords": ["laravel", "repository", "eloquent", "model", "cache"],
   "license": "MIT",
   "authors": [
     {
@@ -11,23 +11,13 @@
   ],
   "require": {
     "php": ">=5.4.0",
+    "illuminate/http": "~5.0|~5.1",
     "illuminate/config": "~5.0|~5.1",
     "illuminate/support": "~5.0|~5.1",
-    "illuminate/console": "~5.0|~5.1",
-    "illuminate/filesystem": "~5.0|~5.1",
-    "league/fractal": "0.12.*",
-    "robclancy/presenter": "1.3.*",
-    "prettus/laravel-validation": "1.1.*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "phpspec/phpspec": "~2.1",
-    "mockery/mockery": "dev-master",
-    "illuminate/support": "~5.0|~5.1",
-    "illuminate/http": "~5.0|~5.1",
-    "illuminate/http": "~5.0|~5.1",
     "illuminate/database": "~5.0|~5.1",
-    "illuminate/pagination": "~5.0|~5.1"
+    "illuminate/pagination": "~5.0|~5.1",
+    "illuminate/console": "~5.0|~5.1",
+    "illuminate/filesystem": "~5.0|~5.1"
   },
   "autoload": {
     "psr-4": {
@@ -36,6 +26,11 @@
   },
   "config": {
     "preferred-install": "dist"
+  },
+  "suggest": {
+    "league/fractal": "Required to use the Fractal Presenter (0.12.*).",
+    "robclancy/presenter": "Required to use the Presenter Model (1.3.*)",
+    "prettus/laravel-validation": "Required to use the Repository Validators (1.1.*)"
   },
   "minimum-stability": "dev"
 }
