--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,10 @@
     "robclancy/presenter": "Required to use the Presenter Model (1.3.*)",
     "prettus/laravel-validation": "Required to use the Repository Validators (1.1.*)"
   },
+  "extra": {
+    "branch-alias": {
+      "dev-develop": "2.1-dev"
+    }
+  },
   "minimum-stability": "dev"
 }
