--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,16 @@
   "authors": [
     {
       "name": "Anderson Andrade",
-      "email": "contato@andersonandra.de"
+      "email": "contato@andersonandra.de",
+      "role": "Developer"
     }
   ],
+  "support": {
+    "email": "contato@andersonandra.de",
+    "issues":"https://github.com/andersao/l5-repository/issues",
+    "wiki":"https://github.com/andersao/l5-repository",
+    "source":"https://github.com/andersao/l5-repository"
+  },
   "require": {
     "illuminate/http": "~5.0|~5.1|~5.2",
     "illuminate/config": "~5.0|~5.1|~5.2",
