--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "source":"https://github.com/andersao/l5-repository"
   },
   "require": {
-    "illuminate/http": "~5.0|~5.1|~5.2",
-    "illuminate/config": "~5.0|~5.1|~5.2",
-    "illuminate/support": "~5.0|~5.1|~5.2",
-    "illuminate/database": "~5.0|~5.1|~5.2",
-    "illuminate/pagination": "~5.0|~5.1|~5.2",
-    "illuminate/console": "~5.0|~5.1|~5.2",
-    "illuminate/filesystem": "~5.0|~5.1|~5.2"
+    "illuminate/http": "~5.0",
+    "illuminate/config": "~5.0",
+    "illuminate/support": "~5.0",
+    "illuminate/database": "~5.0",
+    "illuminate/pagination": "~5.0",
+    "illuminate/console": "~5.0",
+    "illuminate/filesystem": "~5.0"
   },
   "autoload": {
     "psr-4": {
