--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,18 @@
       "name": "Anderson Andrade",
       "email": "contato@andersonandra.de",
       "role": "Developer"
+    },
+    {
+      "name": "MohammadReza Honarkhah",
+      "email": "m.honar@gmail.com",
+      "role": "Developer"
     }
   ],
   "support": {
-    "email": "contato@andersonandra.de",
-    "issues":"https://github.com/andersao/l5-repository/issues",
-    "wiki":"https://github.com/andersao/l5-repository",
-    "source":"https://github.com/andersao/l5-repository"
+    "email": "m.honar@gmail.com",
+    "issues":"https://github.com/mammutgroup/l5-repository/issues",
+    "wiki":"https://github.com/mammutgroup/l5-repository",
+    "source":"https://github.com/mammutgroup/l5-repository"
   },
   "require": {
     "illuminate/http": "~5.0",
