--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Filip Nikolovski"
+      "name": "Filip Nikolovski",
       "email": "filip.nikol92@gmail.com",
       "role": "Developer"
     }
