--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
       "name": "Anderson Andrade",
       "email": "contato@andersonandra.de",
       "role": "Developer"
+    },
+    {
+      "name": "Marcus Campos",
+      "email": "campos.v.marcus@gmail.com",
+      "role": "Developer"
     }
   ],
   "support": {
