--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
   },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "6.4"
+    "phpunit/phpunit": "6.4",
+    "mockery/mockery": "dev-master"
   }
 }
