--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "illuminate/pagination": "~5.0",
     "illuminate/console": "~5.0",
     "illuminate/filesystem": "~5.0",
-    "prettus/laravel-validation": "1.1.*"
+    "prettus/laravel-validation": "1.1.*",
+    "fzaninotto/faker": "^1.8@dev"
   },
   "autoload": {
     "psr-4": {
