--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,12 @@
   },
   "suggest": {
     "league/fractal": "Required to use the Fractal Presenter (0.12.*).",
-    "robclancy/presenter": "Required to use the Presenter Model (1.3.*)"
+    "robclancy/presenter": "Required to use the Presenter Model (1.3.*)",
+    "prettus/laravel-validation": "Required to provide easy validation with the repository (1.1.*)"
   },
   "extra": {
     "branch-alias": {
-      "dev-develop": "2.2-dev"
+      "dev-develop": "develop"
     },
     "laravel": {
       "providers": [
