--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "support": {
-    "email": "contato@andersonandra.de",
+    "email": "648003174@qq.com",
     "issues":"https://github.com/clms2/l5-repository/issues",
     "wiki":"https://github.com/clms2/l5-repository",
     "source":"https://github.com/clms2/l5-repository"
