Update composer info

--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,18 @@
   "authors": [
     {
       "name": "Anderson Andrade",
+      "homepage": "http://andersonandra.de",
       "email": "contato@andersonandra.de",
       "role": "Developer"
     }
   ],
+  "homepage": "http://andersao.github.io/l5-repository",
   "support": {
     "email": "contato@andersonandra.de",
     "issues":"https://github.com/andersao/l5-repository/issues",
     "wiki":"https://github.com/andersao/l5-repository",
-    "source":"https://github.com/andersao/l5-repository"
+    "source":"https://github.com/andersao/l5-repository",
+    "docs": "http://andersao.github.io/l5-repository"
   },
   "require": {
     "illuminate/http": "~5.0",
