--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "illuminate/pagination": "~5.0|~6.0",
     "illuminate/console": "~5.0|~6.0",
     "illuminate/filesystem": "~5.0|~6.0",
-    "prettus/laravel-validation": "~1.1|~1.2"
+    "prettus/laravel-validation": "^1.1"
   },
   "autoload": {
     "psr-4": {
