--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,15 @@
     "docs": "http://andersao.github.io/l5-repository"
   },
   "require": {
-    "illuminate/http": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/config": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/support": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/database": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/pagination": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/console": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "illuminate/filesystem": "~5.0|~6.0|~7.0|^8.0|^9.0",
-    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4",
-    "illuminate/validation": "~5.0|~6.0|~7.0|^8.0|^9.0"
+    "illuminate/http": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/config": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/support": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/database": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/pagination": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/console": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "illuminate/filesystem": "~5.0|~6.0|~7.0|^8.0|^9.0|^10",
+    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4|^1.4",
+    "illuminate/validation": "~5.0|~6.0|~7.0|^8.0|^9.0|^10"
   },
   "autoload": {
     "psr-4": {
