--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "prettus/l5-repository",
+  "name": "anouarabdsslm/l5-repository",
   "description": "Laravel 5|6|7|8|9|10|11 - Repositories to  the database layer",
   "keywords": [
     "laravel",
