--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "prettus/l5-repository",
-  "description": "Laravel 5|6|7|8|9|10 - Repositories to  the database layer",
+  "description": "Laravel 5|6|7|8|9|10|11 - Repositories to  the database layer",
   "keywords": [
     "laravel",
     "repository",
@@ -26,15 +26,15 @@
     "docs": "http://andersao.github.io/l5-repository"
   },
   "require": {
-    "illuminate/http": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/config": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/support": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/database": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/pagination": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/console": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "illuminate/filesystem": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0",
-    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4",
-    "illuminate/validation": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0"
+    "illuminate/http": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/config": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/support": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/database": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/pagination": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/console": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "illuminate/filesystem": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
+    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4|~1.5|~1.6|",
+    "illuminate/validation": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0"
   },
   "autoload": {
     "psr-4": {
